# pyModbusTCPtools

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  README_PyPI.md  RELEASE_CHECKLIST.md  cmand instalar.txt  dist.rar  index.html  init_docs_structure.ps1  mkdocs.yml  pyproject.toml  sitemap.xml  teste.py
api/client/: index.html
api/enums/: index.html
api/exceptions/: index.html
changelog/: index.html
concepts/endianness/: index.html
concepts/error_handling/: index.html
concepts/modbus_basics/: index.html
docs/: changelog.md  index.md  installation.md  quickstart.md
docs/api/: client.md  enums.md  exceptions.md
docs/concepts/: endianness.md  error_handling.md  modbus_basics.md
docs/examples/: read_coils.md  read_discrete_inputs.md  read_floats32bits.md  read_floats64bits.md  read_integers16bits.md  read_integers32bits.md  read_integers64bits.md  reconnection.md  write_coils.md  write_floats32bits.md  write_floats64bits.md  write_integers16bits.md  write_integers32bits.md  write_integers64bits.md
examples/read_coils/: index.html
examples/read_discrete_inputs/: index.html
examples/read_floats32bits/: index.html
examples/read_floats64bits/: index.html
examples/read_integers16bits/: index.html
examples/read_integers32bits/: index.html
examples/read_integers64bits/: index.html
examples/reconnection/: index.html
examples/write_coils/: index.html
examples/write_floats32bits/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
tests/: test_conversions.py
(+12 files in other folders)
