[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyModbusTCPtools"
version = "0.1.0"
description = "Biblioteca Python para comunicação Modbus TCP resiliente com leitura e escrita tipada"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Jocivaldo Siqueira da Silva Júnior" }
]
requires-python = ">=3.8"
keywords = ["modbus", "modbus-tcp", "industrial", "automation", "plc"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Hardware",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

dependencies = [
  "pyModbusTCP>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/siqueira89jr-hash/pyModbusTCPtools"
Documentation = "https://siqueira89jr-hash.github.io/pyModbusTCPtools"
Repository = "https://github.com/siqueira89jr-hash/pyModbusTCPtools"
Issues = "https://github.com/siqueira89jr-hash/pyModbusTCPtools/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
